k8s/rsdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: review-service
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: review-service
  strategy: {}
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: review-service
      name: review-service
    spec:
      containers:
        - env:
            - name: Dummy
              value: dummy
          image: docker.io/kmehant/review-service:latest
          imagePullPolicy: Always
          name: review-service
          ports:
            - containerPort: 8083
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}


# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: review-service
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: review-service
#     spec:
#       containers:
#       - name: review-service
#         image: docker.io/kmehant/review-service:latest
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 8083
#           protocol: TCP
#       restartPolicy: Always
