k8s/dsservice.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: eureka
  name: eureka
  namespace: mehant
spec:
  ports:
    - name: port-8761
      port: 8761
      targetPort: 8761
  selector:
    move2kube.konveyor.io/service: eureka
  type: ClusterIP
status:
  loadBalancer: {}


# kind: Service
# apiVersion: v1
# metadata:
#   name: eureka
# spec:
#   ports:
#   - port: 8761
#     protocol: TCP
#     targetPort: 8761
#   selector:
#     app: eureka
