k8s/rsservice.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: review-service
  name: review-service
spec:
  ports:
    - name: port-8083
      port: 8083
      targetPort: 8083
  selector:
    move2kube.konveyor.io/service: review-service
  type: ClusterIP
status:
  loadBalancer: {}

# kind: Service
# apiVersion: v1
# metadata:
#   name: review-service
# spec:
#   ports:
#   - port: 8083
#     protocol: TCP
#     targetPort: 8083
#   selector:
#     app: review-service
