k8s/service_movie-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: 'true'
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: movie-service
  name: movie-service
  namespace: mehant
spec:
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    move2kube.konveyor.io/service: movie-service
  type: ClusterIP
status:
  loadBalancer: {}
