k8s/service_review-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: 'true'
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: review-service
  name: review-service
  namespace: mehant
spec:
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    move2kube.konveyor.io/service: review-service
  type: ClusterIP
status:
  loadBalancer: {}
